<resources>
    <string name="app_name">FrontEnd-distributed-systems-2023</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="date_birth">Age (ex:28)</string>
    <string name="tool_bar"></string>
    <string name="start_button">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_button">Profile</string>
    <string name="route_button">Route</string>
    <string name="statistics_button">Statistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="route_1">Route 1</string>
    <string name="route_2">Route 2</string>
</resources>